# kitty-cheatsheet

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: generate_changelog.py  parse_labels.py
src/kitty_cheatsheet/: __init__.py  __main__.py  categories.py  cli.py  config.py  pager.py  parser.py  renderer.py
