[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitty-cheatsheet"
version = "0.1.0"
description = "Interactive keybinding cheatsheet for the kitty terminal emulator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "Sam Foreman" }]
keywords = ["kitty", "terminal", "keybindings", "cheatsheet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
kitty-cheatsheet = "kitty_cheatsheet.cli:main"

[project.urls]
Homepage = "https://github.com/saforem2/kitty-cheatsheet"
Repository = "https://github.com/saforem2/kitty-cheatsheet"
